# polyphony-ledger

./: .env.example  .env.prod.example  .env.tunnel.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.tunnel.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  authz.py  config.py  logging.py  main.py  metrics.py  tracing.py  websocket.py
backend/app/api/: routes_analytics.py  routes_balances.py  routes_governance.py  routes_health.py  routes_ledger.py  routes_observability.py  routes_replay.py  routes_tx.py
backend/app/clickhouse/: __init__.py  client.py  queries.py  schema.sql  writer_consumer.py
backend/app/db/: migrations_instructions.md  schema.sql  session.py
backend/app/kafka/: __init__.py  consumer_balance_projector.py  consumer_ledger_writer.py  consumer_validator.py  dlq.py  outbox_publisher.py  producer.py  serde.py  topics.py  worker_metrics.py
backend/app/services/: analytics.py  balances.py  governance.py  ledger.py  replay.py  validate_tx.py
backend/app/utils/: idempotency.py  time.py
docs/: 01-yonetici-ozeti.md  02-urun-vizyonu-ve-cozulen-problemler.md  03-teknik-mimari-ve-farklilastiricilar.md  04-rekabet-analizi-ve-konumlandirma.md  05-canli-demo-plani-ve-satis-akisi.md  06-fiyatlandirma-paketleri-ve-ticari-model.md  07-guvenlik-uyumluluk-ve-kurumsal-hazirlik.md  08-online-yayin-stratejisi-ve-maliyet-plani.md  09-yol-haritasi-ve-gelistirme-onerileri.md  10-altyapiyi-satmak-icin-pratik-oneriler.md  11-profesyonel-maliyet-modeli.md  12-roi-checklist-ve-kpi-modeli.md  (+4 more)
(+71 files in other folders)
